--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "colyseus": "^0.10.7",
     "colyseus.js": "^0.10.5",
     "express": "^4.16.4",
+    "howler": "^2.1.2",
     "nodemon": "^1.19.0"
   }
 }
