--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "colyseus.js": "^0.10.5",
     "express": "^4.16.4",
     "howler": "^2.1.2",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "update": "^0.7.4"
   }
 }
